idf_component_register(SRC_DIRS "."
                                "CANopen"
                                "CANopen/stack"
                                "CANopen/driver"
                                "CANopen/hardware"
                                "CANopen/stack/301/"
                                "CANopen/stack/303/"
                                "CANopen/stack/305/"
                                "CANopen/stack/309/"
                                "CANopen/stack/extra"
                                "CANopen/stack/storage"                               

                    INCLUDE_DIRS "."
                                 "CANopen"
                                 "CANopen/stack"
                                 "CANopen/driver"
                                 "CANopen/hardware"
                                 "CANopen/stack/301/"
                                 "CANopen/stack/303/"
                                 "CANopen/stack/305/"
                                 "CANopen/stack/309/"
                                 "CANopen/stack/extra"
                                 "CANopen/stack/storage"
                                 )